install python 3.6-dev and 3.7-dev

--- a/.travis.yml
+++ b/.travis.yml
@@ -78,6 +78,14 @@ addons:
     - libopenblas-dev
     - libopenblas-base
     - gfortran
+addons:
+  apt:
+    sources:
+    - sourceline: 'ppa:deadsnakes/ppa'
+    packages:
+    - python3.6  # To compile targets with a 3.6 compiler.
+    - python3.6-dev  # To build host extension modules under 3.6
+    - python3.7-dev  # To build host extension modules under 3.7
 
 cache:
   directories:
