--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ compiler:
 
 env:
   global:
-    - PYTHON_INCLUDE_DIR=/usr/include/python2.7/
+    - PYTHON_INCLUDE_DIR=/usr/include/python3.6/
     - CUDA=9.2.148-1
     - CUDA_SHORT=9.2
     - CUDA_APT=9-2
@@ -137,8 +137,6 @@ jobs:
           if [ ! -f "${SUITESPARSE}/lib/libcxsparse.so" ]; then
           sh ./get_suitesparse.sh > /dev/null
           fi
-        - ls /usr/include/
-        - ls /usr/include/python3.6/
     - &shared 
       stage: MGS 
       before_install:
@@ -186,30 +184,30 @@ jobs:
           tail -n 100 /tmp/log_mgs.txt
           echo "Build failed"
           fi
-    #- stage: NGS 
-      #<<: *shared
-      #before_install:
-        #- export BUILD_SYSTEM=--as-NGS
-    #- stage: NTS 
-      #<<: *shared
-      #before_install:
-        #- export BUILD_SYSTEM=--as-NTS
-    #- stage: NTS-NVU 
-      #<<: *shared
-      #before_install:
-        #- export BUILD_SYSTEM=--as-NTS-NVU
-    #- stage: GPU
-      #<<: *shared
-      #before_install:
-        #- export BUILD_SYSTEM=--as-GPU
-    #- stage: deploy
-      #after_success:
-        #- echo "Test Success - Branch($TRAVIS_BRANCH) Pull Request($TRAVIS_PULL_REQUEST) Tag($TRAVIS_TAG)"
-          ##  - if [[ "$TRAVIS_BRANCH" == "master" ]]; then echo -e "Push Container to Docker Hub"; fi
-          ##  - docker login -e=$DOCKER_EMAIL -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
-          ##  - export REPO=jayjohnson/springxd-base
-          ##  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
-          ##  - docker build -f Dockerfile -t $REPO:$COMMIT .
-          ##  - docker tag $REPO:$COMMIT $REPO:$TAG
-          ##  - docker tag $REPO:$COMMIT $REPO:travis-$TRAVIS_BUILD_NUMBER
-          ##  - docker push $REPO
+    - stage: NGS 
+      <<: *shared
+      before_install:
+        - export BUILD_SYSTEM=--as-NGS
+    - stage: NTS 
+      <<: *shared
+      before_install:
+        - export BUILD_SYSTEM=--as-NTS
+    - stage: NTS-NVU 
+      <<: *shared
+      before_install:
+        - export BUILD_SYSTEM=--as-NTS-NVU
+    - stage: GPU
+      <<: *shared
+      before_install:
+        - export BUILD_SYSTEM=--as-GPU
+    - stage: deploy
+      after_success:
+        - echo "Test Success - Branch($TRAVIS_BRANCH) Pull Request($TRAVIS_PULL_REQUEST) Tag($TRAVIS_TAG)"
+          #  - if [[ "$TRAVIS_BRANCH" == "master" ]]; then echo -e "Push Container to Docker Hub"; fi
+          #  - docker login -e=$DOCKER_EMAIL -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
+          #  - export REPO=jayjohnson/springxd-base
+          #  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
+          #  - docker build -f Dockerfile -t $REPO:$COMMIT .
+          #  - docker tag $REPO:$COMMIT $REPO:$TAG
+          #  - docker tag $REPO:$COMMIT $REPO:travis-$TRAVIS_BUILD_NUMBER
+          #  - docker push $REPO
