Update travis.yml to have PYTHON_LIB Fix configure.py to generate path to header of SuiteSparse under mpiCC/gcc [previously works on nvcc only]

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ compiler:
 env:
   global:
     - PYTHON_INCLUDE_DIR=/usr/include/python3.6/
+    - PYTHON_LIB=/usr/lib/x86_64-linux-gnu/
     - CUDA=9.2.148-1
     - CUDA_SHORT=9.2
     - CUDA_APT=9-2
