--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -183,6 +183,15 @@ ENV PATH=${MPI_HOME}/bin:${PATH} \
      INCLUDE_PATH=${MPI_HOME}/include:${INCLUDE_PATH} \
      CPLUS_INCLUDE_PATH=${MPI_HOME}/include:${CPLUS_INCLUDE_PATH}
 
+RUN apt-get update -y && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+        bc \
+        libc-dbg \
+        gdb \
+        gdbserver \
+        nvidia-cuda-gdb \
+        cgdb && \
+    rm -rf /var/lib/apt/lists/*
 
 #RUN INSTALLER=cuda-repo-${UBUNTU_VERSION}_${CUDA}_amd64.deb && \
     #wget http://developer.download.nvidia.com/compute/cuda/repos/${UBUNTU_VERSION}/x86_64/${INSTALLER}
