--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,6 +1,7 @@
 # 
 # HPC Base image
 # Contents:
+#   Ubuntu 16.04
 #   CUDA version 10.0
 #   FFTW version 3.3.8
 #   GNU compilers (upstream)
@@ -8,6 +9,9 @@
 #   Mellanox OFED version 3.4-1.0.0.0
 #   OpenMPI version 3.1.2
 #   Python 2 and 3 (upstream)
+#   vim
+#   cgdb 0.7.1 (cgdb-cuda)
+#   diffutil 3.7
 # 
 
 FROM nvidia/cuda:10.0-devel-ubuntu16.04 AS devel-base
@@ -28,7 +32,7 @@ RUN apt-get update -y && \
         gfortran && \
     rm -rf /var/lib/apt/lists/*
 
-# Mellanox OFED version 3.4-1.0.0.0
+# Mellanox OFED 
 RUN apt-get update -y && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
         libnl-3-200 \
