update travis after changing env name with MGS prefix

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ compiler:
 
 env:
   global:
-    - PYTHON_INCLUDE_DIR=/usr/include/python3.6/
-    - PYTHON_LIB=/usr/lib/x86_64-linux-gnu/
+    - MGS_PYTHON_INCLUDE_DIR=/usr/include/python3.6/
+    - MGS_PYTHON_LIB=/usr/lib/x86_64-linux-gnu/
     - CUDA=9.2.148-1
     - CUDA_SHORT=9.2
     - CUDA_APT=9-2
@@ -169,12 +169,11 @@ jobs:
       before_script:
         - echo "$BUILD_SYSTEM"
         - source set_env
-        - source set_env
         - |
           if [ -f "${TRAVIS_BUILD_DIR}/gsl/bin/gslparser" ]; then
           rm ${TRAVIS_BUILD_DIR}/gsl/bin/gslparser
           fi
-        - echo "./build_script -p LINUX $BUILD_SYSTEM --rebuild > /tmp/log_mgs.txt 2>&1 " > quick_build.sh
+        - echo "source set_env && ./build_script -p LINUX $BUILD_SYSTEM --rebuild > /tmp/log_mgs.txt 2>&1 " > quick_build.sh
         - chmod +x ./quick_build.sh
         - travis_wait 30 sh -c ./quick_build.sh 
         - |
